--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@ footer {
 <body>
     <br>
     <footer>
- sasas    
+ sasas    try 2 
 </footer>
+
 <br>
-<iframe src="http://www.swcdomain.co.uk/euro2016v03" width=100% height=500px frameBorder="0"></iframe>
-
-
+<iframe src="http://www.swcdomain.co.uk/euro2016v03" width=100% frameBorder="0"></iframe>
 
 </body>
 </html>
