--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ footer {
 </footer>
 
 <br>
-<iframe src="http://www.swcdomain.co.uk/euro2016v03" width=100% height=100% frameBorder="0"></iframe>
+<iframe src="http://www.swcdomain.co.uk/euro2016v03" width=100% height=500 frameBorder="0"></iframe>
 
 </body>
 </html>
