--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ footer {
 
 <div class="container">
     <div class="h_iframe">
-        <iframe  src="http://www.swcdomain.co.uk/euro2016v03" frameborder="0" allowfullscreen></iframe>
+        <iframe  src="http://www.swcdomain.co.uk/euro2016v03" frameBorder="0" allowfullscreen></iframe>
     </div>
 </div>
 
